reduce content width to fix the layout bug

--- a/_sass/color_schemes/eeglab.scss
+++ b/_sass/color_schemes/eeglab.scss
@@ -1,2 +1,2 @@
 $link-color: $blue-000;
-$content-width: 1000px;
+//$content-width: 1000px;
